--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vh;
+  height: 100vh;
+  background: linear-gradient(180deg, #E6D4DE 0%, #9890C7 100%);
 }
 
 code {
