--- a/src/ui/components/c1-SuperButton/SuperButton.module.css
+++ b/src/ui/components/c1-SuperButton/SuperButton.module.css
@@ -17,13 +17,16 @@
 }
 
 .button{
+    background-color: #21268F;
+    color: #ECECF9;
     position: relative;
     margin: 10px;
     overflow: hidden;
     cursor: pointer;
-    border-radius: 5px;
-    width: 100px;
-    height: 20px;
+    border-radius: 20px;
+    width: 187px;
+    height: 36px;
+    font-size: 16px;
 
 
 
@@ -32,14 +35,11 @@
     display: block;
     content:'';
     position: absolute;
-
     left: -130%;
     top:0;
     height: 100%;
     width: 20%;
-
     transform: skew(45deg);
-
     background-color: #ffffff;
     opacity: 0.7;
     z-index: 14;
