--- a/src/ui/cards/cards.module.css
+++ b/src/ui/cards/cards.module.css
@@ -1,3 +1,7 @@
+.cards {
+    position: relative;
+}
+
 .header {
     border: 1px solid black;
 }
@@ -19,4 +23,16 @@
 .card_item {
     width: 140px;
     padding: 5px;
+}
+
+.cards_modal {
+    transition: 5ms;
+    width: 420px;
+    height: 410px;
+    background-color: #F9F9FE;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 100px;
+    border-radius: 10px;
 }
