--- a/src/ui/profile/editProfile/editProfile.module.css
+++ b/src/ui/profile/editProfile/editProfile.module.css
@@ -1,16 +1,19 @@
 .main {
-  height: 460px;
-  width: 413px;
-  background-color: #ECECF9;
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .body {
+  height: 460px;
+  width: 413px;
+  background-color: #F9F9FE;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .title {
@@ -44,12 +47,11 @@
   border-radius: 50%;
   right: 35px;
   top: 30px;
+  border: none;
+  padding: 0;
 }
 
-.ss {
-  position: relative;
-  bottom: 3px;
-  right: 8px;
+.imgBtnAvatar {
 }
 
 .forms {
