--- a/src/ui/profile/editProfile/editProfile.module.css
+++ b/src/ui/profile/editProfile/editProfile.module.css
@@ -7,16 +7,17 @@
 }
 
 .body {
-  height: 460px;
-  width: 413px;
+  min-height: 540px;
+  max-width: 413px;
   background-color: #F9F9FE;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+  border-radius: 8px;
 }
 
 .title {
+  margin-top: 36px;
   margin-bottom: 15px;
   font-family: Poppins;
   font-style: normal;
@@ -37,16 +38,16 @@
   height: 108px;
   background: #D7D8EF;
   border-radius: 50%;
-  margin-bottom: 25px;
+  margin-bottom: 38px;
 }
 
 .editImg {
-  position: relative;
+  position: absolute;
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  right: 35px;
-  top: 30px;
+  right: 0;
+  top: 77px;
   border: none;
   padding: 0;
 }
@@ -58,17 +59,64 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  margin-bottom: 80px;
 }
 
-.nameFormNick {
+.nameForm {
   position: relative;
+  left: 34px;
+  font-family: SF UI Display;
+  font-size: 13px;
+  line-height: 20px;
+  color: #24254A;
+  opacity: 0.5;
 }
 
 .nameFormEmail {
-  position: relative;
+  /*position: relative;*/
 }
+
+
+.input {
+  width: 347px;
+  margin: 0 33px 24px 33px;
+  padding: 2px 0 4px 0 !important;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #2D2E46;
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-radius: 0;
+  border-bottom: 1.5px solid gray;
+  background-color: #F9F9FE;
+}
+
+.input:focus, .ant-input-focused {
+  border-color: #40a9ff;
+  box-shadow: none !important;
+}
+
 
 .buttons {
   display: flex;
   flex-direction: row;
+  max-width: 100%;
+}
+
+.button {
+  width: 124px !important;
+  height: 33px !important;
+}
+
+.button:not(:last-child) {
+  margin-right: 95px;
+  background-color: #D7D8EF;
+}
+
+.btnCancel {
+}
+
+.btnSave {
 }
