--- a/src/ui/components/SearchByName/SearchByName.module.css
+++ b/src/ui/components/SearchByName/SearchByName.module.css
@@ -1,8 +1,10 @@
 .input{
-  width: 461px;
+  width: 20px;
   height: 35px;
   opacity: 0.5;
   border: 1px solid #635D80;
   box-sizing: border-box;
   border-radius: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
